@@ -1,0 +1,3 @@
+^.git$
+^.*\.Rproj$
+^\.Rproj\.user$
