@@ -1,3 +1,8 @@
+2017-10-13  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/pkgKitten.R (kitten): Copy in .Rbuildignore if none present
+	* inst/skel/dot.Rbuildignore: Aded
+
 2017-10-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/pkgKitten.R (kitten): Copy in .gitignore if none present
